--- a/medical_inventory/Gemfile
+++ b/medical_inventory/Gemfile
@@ -1,5 +1,7 @@
 source 'https://rubygems.org'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
+gem 'carrierwave', '>= 1.0.0.rc', '< 2.0'
+# gem for icon image
 gem 'rails', '~> 5.0.0', '>= 5.0.0.1'
 # bootstrap-sass
 gem 'bootstrap-sass', '~> 3.3.6'
